--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,865 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: linear-gradient(to right, #64cedb, #8bd6ec, #b0ddf6, #d0e5fb, #e9effd, #eef0fd, #f3f1fc, #f7f3fc, #f3e9f9, #f1dff4, #f1d5ed, #f1cae5);
+  color: black;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  monospace;
+}
+
+a{
+  color: rgb(16, 131, 177);
+  text-decoration: none;
+}
+
+/*Inicio*/
+.logo-principal {
+  margin-top: 10px;
+  border-radius: 50%;
+  max-width: 70px;
+  max-height: 70px;
+}
+
+.logo-texto {
+  margin-top: 10px;
+  width: 100px;
+}
+
+.layout {
+  width: 85%;
+  margin: 0 auto;
+}
+
+.header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+  height: 132px;
+  border-bottom: 3px solid black;
+  margin-bottom: 35px;
+}
+
+.header .logo {
+  flex-grow: 2;
+  display: flex;
+}
+
+.header .logo span{
+  display: block;
+  font-size: 56px;
+  font-weight: bolder;
+  margin-top: 5px;
+}
+
+.header nav {
+  flex-grow: 1;
+}
+
+.header nav ul {
+  height: 132px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  list-style: none;
+}
+
+.header li {
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 18px;
+  margin-left: 15px;
+  margin-right: 15px;
+}
+
+.header li a{
+  color: black;
+  text-decoration: none;
+  transition: all 300ms;
+}
+
+.header .activado,
+.header a:hover {
+  color: rgb(60, 162, 196);
+}
+
+.content {
+  min-height: 300px;
+}
+
+.footer {
+  min-height: 40px;
+  line-height: 7px;
+  text-align: center;
+  font-size: 14px;
+  margin-top: 80px;
+  border-top: 3px solid black;
+  padding-top: 45px;
+  color: black;
+}
+
+.home h1{
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-weight: 400;
+  font-size: 60px;
+  margin-bottom: 0px;
+  margin-top: 60px;
+}
+
+.home strong{
+  color: rgb(60, 162, 196);
+}
+
+.home h2{
+  color: black;
+  font-weight: lighter;
+}
+
+.home .title a{
+  padding: 4px;
+  border-radius: 5px;
+  color: black;
+  background-color: rgb(60, 162, 196);
+  text-decoration: none;
+  transition: all 300ms;
+}
+
+.home .title a:hover,
+input[type="submit"]:hover,
+button:hover {
+  background-color: rgb(43, 89, 104);
+  color: white;
+}
+
+.home .heading{
+  font-size: 40px;
+  font-weight: 500;
+  margin-bottom: 0px;
+}
+
+.home p{
+  color: black;
+}
+
+/*Formulario*/
+input[type="text"],
+textarea{
+  display: block;
+  padding: 15px;
+  margin-top: 20px;
+  width: 250px;
+  border: 0px;
+  border-radius: 5px;
+}
+
+input[type="submit"],
+button{
+  font-size: 15px;
+  padding: 10px;
+  margin-top: 15px;
+  border: 0px;
+  border-radius: 5px;
+  color: black;
+  background-color: rgb(60, 162, 196);
+  text-decoration: none;
+  cursor: pointer;
+  transition: all 300ms;
+}
+
+/*Productos*/
+.page .heading{
+  font-size: 55px;
+  font-weight: bold;
+}
+
+.works {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.work-item {
+  flex-basis: 30%;
+  flex-grow: 1;
+  margin: 30px;
+}
+
+.work-item .mask{
+  width: 100%;
+  height: 450px;
+  width: 450px;
+  margin-left: 20px;
+  overflow: hidden;
+  border: 1px solid #013368;
+  box-shadow: 0px 5px 15px #013368;
+}
+
+.work-item img{
+  width: 100%;
+  height: 100%;
+}
+
+.work-item span{
+  display: block;
+  color: black;
+  margin-top: 35px;
+  font-weight: lighter;
+}
+
+.work-item h2 {
+  display: block;
+  font-size: 30px;
+  color: black;
+  margin-top: 5px;
+  margin-bottom: 10px;
+}
+
+.work-item a{
+  color: black;
+  text-decoration: none;
+  transition: all 300ms;
+}
+
+.work-item a:hover{
+  color: rgb(60, 162, 196);
+}
+
+.work-item h3{
+  display: block;
+  color: black;
+  padding-top: 10px;
+  margin-top: 0px;
+  border-top: 1px solid black;
+}
+
+/*Títulos*/
+.page-work .mask{
+  height: 270px;
+  width: 470px;
+  overflow: hidden;
+  box-shadow: 0px 5px 15px #013368;
+}
+
+/*Barra de productos*/
+.lista-de-productos {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+  height: 20px;
+  margin-bottom: 35px;
+  margin-left: -40px;
+  color: black;
+  text-decoration: none;
+  transition: all 300ms;
+}
+
+.lista-de-productos .grupo-1,
+.lista-de-productos .grupo-2{
+  display: flex;
+}
+
+.lista-de-productos .grupo-3 {
+  display: flex;
+  font-size: 1px;
+  text-transform: uppercase;
+  font-weight: bolder;
+  margin-left: 13px;
+}
+
+.productos-disponibles {
+  text-transform: uppercase;
+  font-size: 14px;
+  font-weight: bolder;
+  margin-left: 13px;
+}
+
+.lista-de-productos .activado,
+.lista a:hover {
+  color:  rgb(60, 162, 196);
+}
+
+.lista-de-productos .desactivado,
+.lista a:hover {
+  color: black
+}
+
+/*Servicios*/
+.imagen-servicios {
+  width: 400px;
+  border: none;
+  border-radius: 5px;
+}
+
+/*Medidas*/
+
+@media screen and (max-width: 320px) {
+  .header {
+    display: block;
+    height: 70px;
+  }
+
+  .header .logo {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: flex-start;
+  }
+
+  .logo-principal {
+    max-width: 50px;
+    max-height: 50px;
+  }
+
+  .logo-texto {
+    width: 75px;
+  }
+  
+  .header nav ul {
+    padding: 0px;
+    height: 30px;
+  }
+  
+  .header li {
+    font-size: 9px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .footer {
+    font-size: 8px;
+    margin-top: 10px;
+    padding-top: 15px;
+  }
+
+  .home h1{
+    font-size: 23px;
+    margin-top: 50px;
+  }
+
+  .home h2{
+    font-size: 15px;
+  }
+  
+  .home .title a{
+    font-size: 12px;
+    padding: 3px;
+  }
+
+  .home .heading{
+    font-size: 20px;
+  }
+  
+  .home p{
+    font-size: 12px;
+  }
+  
+  .work-item {
+    margin: 5px;
+  }
+  
+  .work-item .mask{
+    height: 200px;
+    width: 200px;
+  }
+  
+  .work-item span{
+    margin-top: 15px;
+    font-size: 12px;
+  }
+  
+  .work-item h2 {
+    font-size: 18px;
+  }
+
+  .work-item h3 {
+    font-size: 13px;
+  }
+
+  .work-item p {
+    font-size: 12px;
+  }
+  
+  /*Productos*/
+  .page .heading{
+    font-size: 30px;
+  }
+
+  .lista-de-productos {
+    display: block;
+    height: 40px;
+    margin-left: -50px;
+    margin-top: -10px;
+  }
+
+  .lista-de-productos .grupo-1,
+  .lista-de-productos .grupo-2{
+    display: flex;
+    margin-bottom: 10px;
+  }
+
+  .lista-de-productos .grupo-3 {
+    display: flex;
+    justify-content: center;
+    font-size: 9px;
+  }
+  
+  .productos-disponibles {
+    font-size: 9px;
+    margin-left: auto;
+  }
+
+  .imagen-servicios {
+    width: 200px;
+    height: 200px;
+  }
+}
+
+@media screen and (min-width: 321px) and (max-width: 374px){
+  .header {
+    display: block;
+    height: 70px;
+  }
+
+  .header .logo {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  .logo-principal {
+    max-width: 50px;
+    max-height: 50px;
+  }
+
+  .logo-texto {
+    width: 75px;
+  }
+
+  .header nav ul {
+    padding: 0px;
+    height: 30px;
+  }
+  
+  .header li {
+    font-size: 9px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .footer {
+    font-size: 8px;
+    margin-top: 10px;
+    padding-top: 15px;
+  }
+
+  .home h1{
+    font-size: 23px;
+    margin-top: 50px;
+  }
+
+  .home h2{
+    font-size: 15px;
+  }
+  
+  .home .title a{
+    font-size: 12px;
+    padding: 3px;
+  }
+
+  .home .heading{
+    font-size: 20px;
+  }
+  
+  .home p{
+    font-size: 12px;
+  }
+  
+  .work-item {
+    margin: 5px;
+  }
+  
+  .work-item .mask{
+    height: 200px;
+    width: 200px;
+  }
+  
+  .work-item span{
+    margin-top: 10px;
+    font-size: 12px;
+  }
+  
+  .work-item h2 {
+    font-size: 18px;
+  }
+
+  .work-item h3 {
+    font-size: 15px;
+  }
+
+  .work-item p {
+    font-size: 12px;
+  }
+  
+  /*Productos*/
+  .page .heading{
+    font-size: 30px;
+  }
+
+  .lista-de-productos {
+    display: block;
+    height: 40px;
+    margin-top: -12px;
+  }
+
+  .lista-de-productos .grupo-1,
+  .lista-de-productos .grupo-2  {
+    display: flex;
+    margin-bottom: 10px;
+  }
+  
+  .productos-disponibles {
+    font-size: 10px;
+    margin-left: auto;
+  }
+
+  .lista-de-productos .grupo-3 {
+    font-size: 10px;
+    display: flex;
+    justify-content: center;
+  }
+
+  .imagen-servicios {
+    width: 200px;
+    height: 200px;
+  }
+}
+
+@media screen and (min-width: 375px) and (max-width: 424px){
+  .header {
+    display: block;
+    height: 70px;
+  }
+
+  .header .logo {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  .logo-principal {
+    max-width: 50px;
+    max-height: 50px;
+  }
+
+  .logo-texto {
+    width: 75px;
+  }
+  
+  .header nav ul {
+    height: 30px;
+    padding: 0px;
+  }
+  
+  .header li {
+    font-size: 11px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .footer {
+    font-size: 8px;
+    margin-top: 10px;
+    padding-top: 15px;
+  }
+
+  .home h1{
+    font-size: 23px;
+    margin-top: 50px;
+  }
+
+  .home h2{
+    font-size: 15px;
+  }
+  
+  .home .title a{
+    font-size: 12px;
+    padding: 3px;
+  }
+
+  .home .heading{
+    font-size: 20px;
+  }
+  
+  .home p{
+    font-size: 12px;
+  }
+  
+  .work-item {
+    margin: 5px;
+  }
+  
+  .work-item .mask{
+    height: 300px;
+    width: 300px;
+  }
+  
+  .work-item span{
+    margin-top: 20px;
+    font-size: 12px;
+  }
+  
+  .work-item h2 {
+    font-size: 18px;
+  }
+
+  .work-item h3 {
+    font-size: 15px;
+  }
+
+  .work-item p {
+    font-size: 12px;
+  }
+  
+  /*Productos*/
+  .page .heading{
+    font-size: 30px;
+  }
+
+  .lista-de-productos {
+    display: block;
+    height: 40px;
+    margin-left: -50px;
+    margin-top: -10px;
+  }
+
+  .lista-de-productos .grupo-1,
+  .lista-de-productos .grupo-2 {
+    display: flex;
+    margin-bottom: 10px;
+  }
+
+  .lista-de-productos .grupo-3 {
+    display: flex;
+    font-size: 11px;
+    justify-content: center;
+  }
+  
+  .productos-disponibles {
+    font-size: 11px;
+    margin-left: 15px;
+  }
+
+  .imagen-servicios {
+    width: 250px;
+    height: 250px;
+  }
+}
+
+@media screen and (min-width: 425px) and (max-width: 767px) {
+  .header {
+    display: block;
+    height: 70px;
+  }
+
+  .header .logo {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  .logo-principal {
+    max-width: 50px;
+    max-height: 50px;
+  }
+
+  .logo-texto {
+    width: 75px;
+  }
+  
+  .header nav ul {
+    height: 30px;
+    padding: 0px;
+  }
+  
+  .header li {
+    font-size: 11px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .footer {
+    font-size: 10px;
+    margin-top: 10px;
+    padding-top: 15px;
+  }
+
+  .home h1{
+    font-size: 25px;
+    margin-top: 50px;
+  }
+
+  .home h2{
+    font-size: 17px;
+  }
+  
+  .home .title a{
+    font-size: 15px;
+    padding: 3px;
+  }
+
+  .home .heading{
+    font-size: 23px;
+  }
+  
+  .home p{
+    font-size: 15px;
+  }
+  
+  .work-item {
+    margin: 5px;
+  }
+  
+  .work-item .mask{
+    height: 200px;
+    width: 200px;
+  }
+  
+  .work-item span{
+    margin-top: 20px;
+    font-size: 12px;
+  }
+  
+  .work-item h2 {
+    font-size: 18px;
+  }
+
+  .work-item h3 {
+    font-size: 15px;
+  }
+
+  .work-item p {
+    font-size: 12px;
+  }
+  
+  /*Productos*/
+  .page .heading{
+    font-size: 30px;
+  }
+
+  .lista-de-productos {
+    display: block;
+    height: 40px;
+    margin-left: -80px;
+    margin-top: -10px;
+  }
+
+  .lista-de-productos .grupo-1,
+  .lista-de-productos .grupo-2 {
+    display: flex;
+    margin-bottom: 10px;
+  }
+
+  .lista-de-productos .grupo-3 {
+    display: flex;
+    font-size: 11px;
+    justify-content: center;
+  }
+  
+  .productos-disponibles {
+    font-size: 11px;
+    margin-left: auto;
+  }
+
+  .imagen-servicios {
+    width: 350px;
+    height: 350px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1024px){
+  .header .logo h3{
+    font-size: 19px;
+  }
+  
+  .header li {
+    font-size: 15px;
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+  
+  .footer {
+    font-size: 15px;
+    margin-top: 80px;
+    padding-top: 45px;
+  }
+  
+  .home h1{
+    font-size: 60px;
+    margin-top: 50px;
+  }
+
+  .home h2 {
+    font-size: 30px;
+  }
+  
+  .home .title a{
+    padding: 7px;
+    font-size: 25px;
+  }
+  
+  .home .heading{
+    font-size: 40px;
+  }
+  
+  .home p{
+    font-size: 20px;
+  }
+  
+  /*Productos*/
+  .page .heading{
+    font-size: 55px;
+  }
+  
+  .work-item {
+    margin: 30px;
+  }
+  
+  .work-item .mask{
+    height: 250px;
+    width: 250px;
+  }
+  
+  .work-item span{
+    margin-top: 35px;
+  }
+
+  
+  /*Barra de productos*/
+  .lista-de-productos {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    list-style: none;
+    height: 20px;
+    margin-bottom: 35px;
+  }
+  
+  .lista-de-productos .grupo-1,
+  .lista-de-productos .grupo-2{
+    display: flex;
+  }
+
+  .lista-de-productos .grupo-3 {
+    display: flex;
+    font-size: 11.5px;
+    margin-left: 5px;
+  }
+  
+  .productos-disponibles {
+    font-size: 11.5px;
+    margin-left: 5px;
+  }
 }
